--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <img src="images/logo7.png" alt="slide" class="slide__image">
         <img src="images/logo8.png" alt="slide" class="slide__image">
         <img src="images/logo9.png" alt="slide" class="slide__image">
+        <img src="images/logo10.png" alt="slide" class="slide__image">
       </div>
 
       <div class="slide">
@@ -37,6 +38,7 @@
         <img src="images/logo7.png" alt="slide" class="slide__image">
         <img src="images/logo8.png" alt="slide" class="slide__image">
         <img src="images/logo9.png" alt="slide" class="slide__image">
+        <img src="images/logo10.png" alt="slide" class="slide__image">
       </div>
 
     </div>
